fix bug: typing extra spaces

--- a/style.css
+++ b/style.css
@@ -19,12 +19,11 @@ body {
     white-space: nowrap;
     overflow: hidden;
     animation:
-        typing 5s steps(21),
+        typing 5s steps(19) forwards,
         cursor .4s step-end infinite alternate;
 }
 
 @keyframes typing {
-    from {width: 0}
     to {width: 100%}
 }
 
